Adding common method for notification parameters